--- a/app/src/main/res/layout/molde_form.xml
+++ b/app/src/main/res/layout/molde_form.xml
@@ -10,12 +10,15 @@
 
     <TextView
         android:id="@+id/txvMoldeFormHeader"
+        style="@style/headers"
         android:layout_marginTop="@dimen/margin_x1"
         android:text="@string/header_molde_form"
-        style="@style/headers"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/tilMoldeFormNombre"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilMoldeFormNombre"
@@ -23,15 +26,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_x6"
         android:hint="@string/property_nombre"
-        android:autofillHints=""
         android:textColorHint="@color/lab_fore_gre106"
-        app:hintTextColor="@color/purple_200"
-        app:hintTextAppearance="@style/MyHintAppearance"
-        app:boxBackgroundMode="outline"
         app:boxBackgroundColor="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/txvMoldeFormHeader"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintAppearance"
+        app:hintTextColor="@color/purple_200"
+        app:layout_constraintBottom_toTopOf="@+id/tilMoldeFormRef"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/txvMoldeFormHeader">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtMoldeFormNombre"
             style="@style/edtOnMoldeMaquinaForm" />
@@ -43,15 +47,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_x2"
         android:hint="@string/property_referencia"
-        android:autofillHints=""
         android:textColorHint="@color/lab_fore_gre106"
-        app:hintTextColor="@color/purple_200"
-        app:hintTextAppearance="@style/MyHintAppearance"
-        app:boxBackgroundMode="outline"
         app:boxBackgroundColor="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormNombre"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintAppearance"
+        app:hintTextColor="@color/purple_200"
+        app:layout_constraintBottom_toTopOf="@+id/tilMoldeFormDesc"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tilMoldeFormNombre">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtMoldeFormRef"
             style="@style/edtOnMoldeMaquinaForm" />
@@ -63,60 +68,56 @@
         android:layout_height="@dimen/heightDesc_til"
         android:layout_marginTop="@dimen/margin_x2"
         android:hint="@string/property_descripcion"
-        android:autofillHints=""
         android:textColorHint="@color/lab_fore_gre106"
-        app:hintTextColor="@color/purple_200"
-        app:hintTextAppearance="@style/MyHintAppearance"
-        app:boxBackgroundMode="outline"
         app:boxBackgroundColor="@android:color/transparent"
-        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormRef"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintAppearance"
+        app:hintTextColor="@color/purple_200"
+        app:layout_constraintBottom_toTopOf="@+id/btnMoldeFormNew"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormRef">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtMoldeFormDesc"
+            style="@style/edtOnMoldeMaquinaForm"
             android:gravity="start|top"
-            android:inputType="textMultiLine"
-            style="@style/edtOnMoldeMaquinaForm" />
+            android:inputType="textMultiLine" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnMoldeFormNew"
-        android:layout_width="@dimen/widthButton_x2"
-        android:layout_height="@dimen/heightButton_x2"
+        style="@style/Widget.App.Button.MainMenu"
         android:layout_marginTop="@dimen/margin_x6"
         android:text="@string/btn_text_guardar"
-        android:textColor="@color/text_gre108"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:cornerRadius="@dimen/strokeRadius_x1"
-        app:strokeWidth="@dimen/strokeWidth_x1"
-        app:strokeColor="@color/strokes_gre107"
-        app:backgroundTint="@color/btn_back_gre105"
-        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormDesc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tilMoldeFormDesc" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabMoldeFormBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_x2"
+        style="@style/Widget.App.FloatingActionButton"
         android:src="@drawable/ic_back"
         android:contentDescription="@string/cont_desc_fab_nav_back"
-        app:tint="@color/fab_fore_gre108"
-        app:backgroundTint="@color/fab_back_gre101"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabMoldeFormList"
+        style="@style/Widget.App.FloatingActionButton"
+        android:src="@drawable/ic_list"
+        android:contentDescription="Volver a la lista"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabMoldeFormHome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_x2"
+        style="@style/Widget.App.FloatingActionButton"
         android:src="@drawable/ic_home"
         android:contentDescription="@string/cont_desc_fab_nav_home"
-        app:tint="@color/fab_fore_gre108"
-        app:backgroundTint="@color/fab_back_gre101"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
