--- a/app/src/main/res/layout/config_show.xml
+++ b/app/src/main/res/layout/config_show.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="@dimen/margin_x5"
+    android:background="@drawable/bg_main"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
